# ros2_learning

./: README.md
chapter_2/base/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
chapter_2/base/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
chapter_2/chapt2_ws/install/: local_setup.sh  setup.sh
chapter_2/chapt2_ws/log/: latest_build
chapter_2/chapt2_ws/src/example_cpp/: CMakeLists.txt
chapter_2/colcon_test/install/: local_setup.sh  setup.sh
chapter_2/colcon_test/log/: latest_build  latest_test
chapter_2/colcon_test/src/example_launch_param_rviz/: CMakeLists.txt  package.xml
chapter_2/colcon_test/src/example_launch_param_rviz/config/: ball_config.yaml
chapter_2/colcon_test/src/example_launch_param_rviz/launch/: ball_visualizer_launch.py
chapter_2/colcon_test/src/example_launch_param_rviz/rviz/: ball_visualizer_config.rviz
chapter_2/colcon_test/src/example_launch_param_rviz/src/: ball_visualizer.cpp
chapter_2/test_2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapter_2/test_2/log/: latest_build  latest_list
chapter_2/test_2/src/my_test_cpp/: CMakeLists.txt
chapter_2/test_3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapter_2/test_3/log/: latest_build  latest_list
chapter_2/test_3/src/example_py/: package.xml  setup.py
chapter_2/test_4/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapter_2/test_4/log/: latest_build  latest_list
chapter_2/test_4/src/my_test_py/: package.xml  setup.cfg  setup.py
chapter_3/chapt3_ws/install/: local_setup.sh  setup.sh
chapter_3/chapt3_ws/log/: latest_build  latest_list
chapter_3/chapt3_ws/src/my_interfaces_rclcpp/: CMakeLists.txt  package.xml
chapter_3/chapt3_ws/src/my_ros2_interfaces/: CMakeLists.txt
chapter_3/chapt3_ws/src/my_service_rclcpp/: CMakeLists.txt  package.xml
chapter_3/chapt3_ws/src/my_topic_rclcpp/: CMakeLists.txt  package.xml
chapter_4/chapt4_ws/install/: local_setup.sh  setup.sh
chapter_4/chapt4_ws/log/: latest_build  latest_list
chapter_4/chapt4_ws/src/my_action_rclcpp/: CMakeLists.txt
chapter_4/chapt4_ws/src/my_parameters_rclcpp/: CMakeLists.txt
chapter_4/chapt4_ws/src/robot_control_interfaces/: CMakeLists.txt  package.xml
chapter_4/chapt4_ws/src/startup/: CMakeLists.txt
chapter_5/chapt5_ws/install/: local_setup.sh  setup.sh
chapter_5/chapt5_ws/log/: latest_build  latest_list
chapter_5/chapt5_ws/rosbag2_2024_11_16-20_16_20/: metadata.yaml  rosbag2_2024_11_16-20_16_20_0.db3
chapter_5/chapt5_ws/src/test_for_launch/: CMakeLists.txt
rviz2_tasks/install/: local_setup.sh  setup.sh
rviz2_tasks/log/: latest_build  latest_list
rviz2_tasks/src/image_detector/: CMakeLists.txt  package.xml
rviz2_tasks/src/image_detector/src/: main.cpp  (+2 more)
rviz2_tasks/src/rm_interfaces/: CMakeLists.txt  package.xml
rviz2_tasks/src/show_points/: CMakeLists.txt
simple_calculator_task/ws/install/: local_setup.sh  setup.sh
simple_calculator_task/ws/log/: latest_build  latest_list
simple_calculator_task/ws/src/add_task/: CMakeLists.txt
simple_calculator_task/ws/src/add_task/src/: my_test.cpp  task_pub_ser.cpp  task_sub_cli.cpp
(+338 files in other folders)
