<?xml version="1.0"?>
<package format="2">
  <name>example_launch_param_rviz</name>
  <version>0.0.0</version>
  <description>Example package to visualize a ball rotating in the xy-plane with launch parameters and Rviz2 support.</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- <exec_depend>rviz2</exec_depend>
  <exec_depend>ament_index_python</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
